snapshot of wem plugin support - (just login) and jfx support (it starts a gui)