@@ -46,86 +46,11 @@ trait TomcatSettings extends Utils {
     Fork.java(forkOpt, "setup.SitesServer" +: args)
   }
 
-  def tomcatEmbeddedScriptWindows(base: File, classpath: Seq[File]) {
-
-    val tomcat = file("bin") / "tomcat"
-    tomcat.mkdirs
-    val classpathLs = for (src <- classpath) yield {
-      val tgt = tomcat / src.getName
-      println(s"+++ ${tgt}")
-      IO.copyFile(src, tgt, false)
-      s"""set CP=%CP%;"%BASE%\\bin\\tomcat\\${src.getName}"""".replaceAllLiterally("\\\\", "\\")
-    }
-
-    val classpathCmd = classpathLs.mkString("\r\n")
-    val script = new java.io.File("sites-server.cmd")
-    script.delete
-    val fw = new java.io.FileWriter(script)
-    val javahome = System.getProperty("java.home")
-    val startArgs = s"""%SITES_PORT% "%BASE%""""
-    val startArgs2 = s"""%SITES_PORT%;"%BASE%""""
-    val opts = """-Djava.io.tmpdir="%BASE%\temp" -Xms256m -Xmx1024m -XX:MaxPermSize=256m -Dorg.owasp.esapi.resources="%BASE%\bin""""
-    val opts2 = opts.replace(' ', ';')
-
-    fw.write(s"""@echo off
-set BASE=%~dp0
-IF %BASE:~-1%==\\ SET BASE=%BASE:~0,-1%
-mkdir "%BASE%\\logs" 2>nul:
-mkdir "%BASE%\\temp" 2>nul:
-call "%BASE%\\agilesites.cmd"
-set JAVA="%SITES_JAVA_HOME%\\bin\\java.exe"
-set CP="%BASE%\\bin";"%BASE%\\bin\\setup.jar";"%BASE%\\home\\bin"
-${classpathCmd}
-set OPTS=${opts}
-if "%~1"=="debug" set OPTS=%OPTS% -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=%SITES_PORT_DEBUG%
-if "%~1"=="stop" goto stop
-if "%~1"=="start" goto start
-if "%~1"=="install" goto install
-if "%~1"=="uninstall" goto uninstall
-if "%~1"=="run" goto run
-if "%~1"=="debug" goto run
-if "%~1"=="kill" goto kill
-echo "usage: start|stop|install|uninstall|run|debug|kill"
-goto end
-:run
-%JAVA% -cp %CP% %OPTS% setup.SitesServer ${startArgs}
-goto end
-:kill
-%JAVA% -cp %CP% %OPTS% setup.SitesServer stop %SITES_PORT_KILL%
-goto end
-:install
-%PRUN% //IS//sites --DisplayName="Sites" --Install="sites.exe" --Startup=auto --JavaHome="${javahome}" --Classpath=TODO --StartClass=setup.SitesServer --StartParams=${startArgs2} --StopClass=setup.SitesServer ++StopParams="stop;%SITES_KILL_PORT%" --StartMode=java ++JvmOptions="${opts2}"  --LogPath="${base}\\logs" --StdOutput --StdError
-goto end
-:uninstall
-%PRUN% //DS//sites
-goto end
-:start
-%PRUN% //ES//sites
-goto end
-:stop
-%PRUN% //SS//sites
-:end
-""")
-    fw.close
-    println(s"+++ ${script}")
-  }
-  
-  def tomcatEmbeddedScriptUnix(base: File, classpath: Seq[File]) {
-	  println("TODO!")
-  }
-
-  lazy val sitesServerScript = taskKey[Unit]("Generate a  Launch Script")
-
-  lazy val sitesServerScriptTask = sitesServerScript := {
-    if (File.pathSeparator == ";")
-      tomcatEmbeddedScriptWindows(baseDirectory.value, tomcatEmbeddedClasspath.value)
-    else
-      tomcatEmbeddedScriptUnix(baseDirectory.value, tomcatEmbeddedClasspath.value)
-  }
 
   lazy val sitesServer = inputKey[Unit]("Launch Local Sites")
 
   lazy val sitesServerTask = sitesServer := {
+    
     val args: Seq[String] = Def.spaceDelimited("<arg>").parsed
     val classpath = tomcatEmbeddedClasspath.value
     val port = sitesPort.value.toInt
@@ -136,7 +61,7 @@ goto end
     val cs = file("webapps") / "cs"
     val cas = file("webapps") / "cas"
 
-    val usage = "usage: start [debug]|stop|status|script"
+    val usage = "usage: start [debug]|stop|status"
 
     args.headOption match {
       case None => println(usage)
@@ -195,7 +120,6 @@ goto end
   val hsqlVersion = "1.8.0.10"
   def tomcatDeps(tomcatConfig: String) = Seq(
     //"org.apache.tomcat" % "tomcat-catalina" % tomcatVersion % tomcatConfig,
-
     "org.apache.tomcat.embed" % "tomcat-embed-core" % tomcatVersion % tomcatConfig,
     "org.apache.tomcat.embed" % "tomcat-embed-logging-juli" % tomcatVersion % tomcatConfig,
     "org.apache.tomcat.embed" % "tomcat-embed-jasper" % tomcatVersion % tomcatConfig,
@@ -207,6 +131,5 @@ goto end
 
   val tomcatSettings = Seq(ivyConfigurations += config("tomcat"),
     libraryDependencies ++= tomcatDeps("tomcat") ++ tomcatDeps("provided"),
-    tomcatEmbeddedClasspathTask, sitesServerTask, sitesServerScriptTask)
-
+    tomcatEmbeddedClasspathTask, sitesServerTask)
 }
